# Sync-Copy

./: .gitignore  package-lock.json  package.json  使用说明.md  项目架构.md
.github/workflows/: build.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  config.rs  crypto.rs  history.rs  lib.rs  main.rs  peer.rs  state.rs
src-tauri/src/network/: client.rs  health.rs  mod.rs  protocol.rs  server.rs
src/routes/: +page.svelte
