[package]
name = "sync-copy"
version = "0.1.0"
description = "LAN clipboard sync between Mac and Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "sync_copy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
directories = "5"
anyhow = "1"
arboard = "3"
axum = "0.8"
# 让 reqwest 用系统默认 TLS 后端（Windows schannel / macOS SecureTransport），避免 rustls 在 Windows 的 crypto provider 坑
reqwest = { version = "0.12", features = ["json"] }
